# familiar

./: .gitignore  README.md  platformio.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-24-claude-code-linux-bridge.md  2026-07-04-phantom-link-autoclear.md  2026-07-04-tidbyt-calendar-moods.md  2026-07-12-ble-flap-backoff.md  2026-07-13-doctor-recovery.md  2026-07-13-familiar-doctor.md  2026-07-13-haiku-archive.md  2026-07-13-m5-never-sleeps.md
docs/superpowers/specs/: 2026-06-24-claude-code-linux-bridge-design.md  2026-06-25-haiku-buddy-design.md  2026-06-30-tidbyt-buddy-design.md  2026-07-04-phantom-link-autoclear-design.md  2026-07-04-tidbyt-calendar-moods-design.md  2026-07-10-env-on-clock-design.md  2026-07-10-m5-env-hat-infopage-design.md  2026-07-12-ble-flap-backoff-design.md  2026-07-13-doctor-recovery-design.md  2026-07-13-familiar-doctor-design.md  2026-07-13-haiku-archive-design.md  2026-07-13-m5-never-sleeps-design.md
linux-bridge/: README.md  hooks-settings.example.json  pyproject.toml
linux-bridge/src/claude_buddy/: ble.py  config.py  daemon.py  haiku.py  heartbeat.py  hook.py  state.py  tidbyt.py  tidbyt_app.star  transcript.py  transport.py
linux-bridge/src/familiar/: archive.py  ble.py  calendar_mood.py  cli.py  config.py  daemon.py  doctor.py  font.py  haiku.py  haiku_render.py  init.py  tidbyt.py  transport.py
linux-bridge/tests/: test_archive.py  test_ble.py  test_calendar_mood.py  test_cli.py  test_config.py  test_daemon.py  test_doctor.py  test_font.py  test_haiku.py  test_haiku_render.py  test_heartbeat.py  test_hook.py  test_init.py  test_state.py  test_tidbyt.py  test_transcript.py  test_transport.py
src/: data.h  env.h  feed.h  main.cpp
test/test_feed/: test_feed.cpp
tools/: build_tidbyt_buddy.py  extract_buddies.py  render_ascii_pet.py
