[project]
name = "claude-buddy"
version = "0.1.0"
description = "Linux bridge: Claude Code activity -> M5StickC buddy (+ Tidbyt)"
requires-python = ">=3.11"
dependencies = ["bleak>=0.22"]

[project.scripts]
claude-buddy = "claude_buddy.daemon:main"
claude-buddy-hook = "claude_buddy.hook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_buddy"]

# Ship the Pixlet render app alongside the package so the daemon can find it.
[tool.hatch.build.targets.wheel.force-include]
"src/claude_buddy/tidbyt_app.star" = "claude_buddy/tidbyt_app.star"

[dependency-groups]
dev = ["pytest>=8"]
